--- a/the-app/src/index.css
+++ b/the-app/src/index.css
@@ -5,9 +5,29 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  text-align: center;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+h1 {
+  text-align: center;
+  font-family: cursive;
+  font-size: 20px;
+  font-size: max(20px, 3vw);
+  margin-top: 0px;
+  margin-bottom: 0px;
+  transition: cubic-bezier(0.47, 0, 0.745, 0.715);
+}
+
+.text {
+  text-align: center;
+}
+
+.subtitle {
+  color: rgb(112, 112, 112);
+  font-family: 'Courier New', Courier, monospace;
+}
+
+.instructions {
+  color: black;
+  font-family: 'Courier New', Courier, monospace;
 }
