--- a/the-app/src/LineRiderGame.css
+++ b/the-app/src/LineRiderGame.css
@@ -2,6 +2,12 @@
   height: 5vmin;
 }
 
+#fill_screen {
+  position: absolute;
+  top: 0; right: 0; bottom: 0; left: 0;
+  border: 1vmin solid black;
+}
+
 #ball-image {
   position: absolute;
 }
