I added in comments to hopefully help understand what is going on

--- a/the-app/src/LineRiderGame.css
+++ b/the-app/src/LineRiderGame.css
@@ -4,9 +4,11 @@
 
 #fill_screen {
   position: absolute;
-  top: 0; right: 0; bottom: 0; left: 0;
+  top: 0; right: 0; left: 0; bottom: 0;
   overflow-y: hidden;
   overflow-x: scroll;
+  background-image: url('./Rock_background.jpg');
+  z-index: -1;
 }
 
 #ball-image {
