Login and Logout added

--- a/the-app/src/index.css
+++ b/the-app/src/index.css
@@ -98,3 +98,9 @@ h1 {
   font-family: 'Courier New', Courier, monospace;
   margin-bottom: 150px;
 }
+
+.login_logout {
+  position: absolute;
+  left: 30px;
+  bottom: 50px;
+}
