--- a/the-app/src/Important Pages/LineRiderGame.css
+++ b/the-app/src/Important Pages/LineRiderGame.css
@@ -7,7 +7,7 @@
   top: 0; right: 0; left: 0; bottom: 0;
   overflow-y: hidden;
   overflow-x: scroll;
-  background-image: url('./Rock_background.jpg');
+  background-image: url('../Backgrounds/Rock_background.jpg');
   z-index: -1;
 }
 
