--- a/the-app/src/Important Pages/IntroPage.css
+++ b/the-app/src/Important Pages/IntroPage.css
@@ -47,3 +47,84 @@
     background-image: url('../Backgrounds/gray_gackground.jpg');
     z-index: -1;
 }
+  
+a.button1{
+    display:inline-block;
+        padding:0.35em 1.2em;
+    border:0.2em solid #7ae73b;
+    margin:0 0.3em 0.3em 0;
+    border-radius:0.2em;
+    box-sizing: border-box;
+    text-decoration:none;
+    font-family:'Bebas',sans-serif;
+    font-weight:300;
+    color:#000000;
+    text-align:center;
+    transition: all 0.2s;
+    animation-delay: 0.0;
+}
+a.button1:hover{
+    color:#000000;
+    background-color:#868686;
+}
+
+@media all and (max-width:30em){
+    a.button1{
+        display:block;
+        margin:0.4em auto;
+    }
+}
+
+.bouncy{
+    animation:bouncy 5s infinite linear;
+    position:relative;
+}
+@keyframes bouncy {
+    0%{top:0em}
+    40%{top:0em}
+    43%{top:-0.9em}
+    46%{top:0em}
+    48%{top:-0.4em}
+    50%{top:0em}
+    100%{top:0em;}
+}
+
+
+.background {
+    position: absolute;
+    background-color: #6f98e4;
+    margin-top:0;margin-left:0;right:0;bottom:0;
+}
+
+.header {
+    background-color: #f1f1f1;
+    padding: 30px;
+    text-align:center;
+    font-size: 35px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    margin-left: 25%;
+    margin-right: 25%;
+}
+
+.section {
+    background-color: #999898;
+    padding: 30px;
+    text-align:center;
+    font-size: 35px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    margin-left: 25%;
+    margin-right: 25%;
+}
+
+.footer {
+    background-color: #f1f1f1;
+    padding: 10px;
+    text-align: center;
+    height: 50%;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    margin-left: 25%;
+    margin-right: 25%;
+}
