--- a/the-app/src/Important Pages/IntroPage.css
+++ b/the-app/src/Important Pages/IntroPage.css
@@ -68,19 +68,21 @@ h1 {
   
 .button1{
     padding:0.35em 1.2em;
-    border-radius: 0.8vmin;
+    border-radius: 50%;
     border-width: 1vmin;
     position: absolute;
     margin-top: 15%;
-    /* font-family:'Bebas',sans-serif; */
     font-family: 'Sriracha', cursive;
-    font-size: 2vmin;
-    font-weight:800;
+    background-color: transparent;
+    font-size: 2.3vmin;
+    font-weight: 300;
     color:#000000;
     text-align:center;
     transition: all 0.2s;
 }
-a.button1:hover{
+
+.button1:hover,
+.button1:focus {
     color:#000000;
     background-color:#868686;
 }
