--- a/the-app/src/Important Pages/IntroPage.css
+++ b/the-app/src/Important Pages/IntroPage.css
@@ -83,7 +83,6 @@ h1 {
 
 .button1:hover,
 .button1:focus {
-    color:#000000;
     background-color:#868686;
 }
 
@@ -97,6 +96,8 @@ h1 {
 .bouncy{
     animation:bouncy 5s infinite linear;
     position:relative;
+    margin-right: 10px;
+    margin-top: 150px;
 }
 @keyframes bouncy {
     0%{top:0em}
@@ -106,4 +107,11 @@ h1 {
     48%{top:-0.4em}
     50%{top:0em}
     100%{top:0em}
+}
+
+#ball {
+    height: 50px;
+    background-color: transparent;
+    background-size: contain;
+    border: none;
 }
