--- a/the-app/src/Important Pages/IntroPage.css
+++ b/the-app/src/Important Pages/IntroPage.css
@@ -24,11 +24,6 @@ h1 {
     transition: cubic-bezier(0.47, 0, 0.745, 0.715);
 }
 
-.text_difficulty {
-    margin-top: 150px;
-    font-size: 4vmin;
-}
-
 .subtitle {
     color: rgb(112, 112, 112);
     font-size: 2vmin;
@@ -43,7 +38,6 @@ h1 {
     text-align: center !important;
     position: relative;
     min-height: 1px;
-    max-width: 100% !important;
 }
   
 .ok_button {
@@ -97,7 +91,7 @@ h1 {
     animation:bouncy 5s infinite linear;
     position:relative;
     margin-right: 10px;
-    margin-top: 150px;
+    margin-top: 100px;
 }
 @keyframes bouncy {
     0%{top:0em}
@@ -114,4 +108,14 @@ h1 {
     background-color: transparent;
     background-size: contain;
     border: none;
+}
+
+.fastest_times {
+    text-align: center;
+    position: absolute;
+    font-family: 'Permanent Marker', cursive;
+    font-size: 22px;
+    max-width: 200px;
+    margin-top: 10px;
+    left: 300;
 }
