--- a/the-app/src/Important Pages/IntroPage.css
+++ b/the-app/src/Important Pages/IntroPage.css
@@ -1,37 +1,53 @@
-
+/* rgb(221,207,142); */
+/* rgb(148,161,151); */
 .text {
     position: relative;
     text-align: center;
-    background-color: blanchedalmond;
-    font-family: 'Permanent Marker', cursive;
+    background-color: white;
+    font-family: 'Acme', sans-serif;
 }
 
 h1 {
     position: relative;
-    background-color: blanchedalmond;
+    background-color: white;
     text-align: center;
     padding-top: 20px;
+    padding-bottom: 10px;
     font-family: 'Akaya Telivigala', cursive;
     font-family: 'Permanent Marker', cursive;
     font-family: 'Satisfy', cursive;
     font-family: 'Carter One', cursive;
     font-family: 'Sriracha', cursive;
     font-family: 'Ranchers', cursive;
+    font-family: 'Acme', sans-serif;
     font-family: 'Aclonica', sans-serif;
     font-size: 8vmin;
-    margin-top: 0px;
-    margin-bottom: 0px;
-    transition: cubic-bezier(0.47, 0, 0.745, 0.715);
+    margin-top: 20px;
+    margin-bottom:0px;
+    width: 50%;
+    border-color: black;
+    border-width: 2vmin;
+    border-radius: 10px;
+    left: 25%;
 }
 
 .subtitle {
-    color: rgb(112, 112, 112);
-    font-size: 2vmin;
+    font-size: 2.9vmin;
+    left: 25%;
+    width: 50%;
+    border-width: 10px;
+    border-color: black;
+    border-radius: 10px;
 }
 
 .instructions {
     color: black;
-    font-size: 2vmin;
+    font-size: 2.9vmin;
+    left: 25%;
+    width: 50%;
+    border-width: 10px;
+    border-color: black;
+    border-radius: 10px;
 }
 
 .in_line {
@@ -44,7 +60,7 @@ h1 {
     border-width: 0.6vmin;
     border-radius: 100%;
     position: relative;
-    margin-top: 150px;
+    margin-top: 90px;
     width: 150px;
     height: 100px;
     font-size: 30px;
@@ -55,7 +71,7 @@ h1 {
     top: 0; right: 0; left: 0; bottom: 0;
     overflow-y: hidden;
     overflow-x: scroll;
-    background-image: url('../Backgrounds/nature.jpg');
+    background-image: url('../Backgrounds/night_edit.jpg');
     background-size: cover;
     z-index: -1;
 }
@@ -66,10 +82,10 @@ h1 {
     border-width: 1vmin;
     position: absolute;
     margin-top: 15%;
-    font-family: 'Sriracha', cursive;
-    background-color: transparent;
-    font-size: 2.3vmin;
-    font-weight: 300;
+    font-family: 'sriracha', cursive;
+    background-color: white;
+    font-size: 2.5vmin;
+    font-weight: 400;
     color:#000000;
     text-align:center;
     transition: all 0.2s;
@@ -79,19 +95,17 @@ h1 {
 .button1:focus {
     background-color:#868686;
 }
-
-@media all and (max-width:30em){
-    a.button1{
-        display:block;
-        margin:0.4em auto;
-    }
+.ball:hover,
+.ball:focus {
+    background-color:#868686;
 }
+
 
 .bouncy{
     animation:bouncy 5s infinite linear;
     position:relative;
     margin-right: 10px;
-    margin-top: 100px;
+    margin-top: 90px;
 }
 @keyframes bouncy {
     0%{top:0em}
@@ -103,19 +117,9 @@ h1 {
     100%{top:0em}
 }
 
-#ball {
+.ball {
     height: 50px;
     background-color: transparent;
     background-size: contain;
     border: none;
-}
-
-.fastest_times {
-    text-align: center;
-    position: absolute;
-    font-family: 'Permanent Marker', cursive;
-    font-size: 22px;
-    max-width: 200px;
-    margin-top: 10px;
-    left: 300;
 }
