--- a/src/Important Pages/IntroPage.css
+++ b/src/Important Pages/IntroPage.css
@@ -22,17 +22,17 @@ h1 {
     font-size: 8vmin;
     margin-top: 20px;
     margin-bottom:0px;
-    width: 50%;
+    width: 60%;
     border-color: black;
     border-width: 2vmin;
     border-radius: 10px;
-    left: 25%;
+    left: 20%;
 }
 
 .subtitle {
     font-size: 2.9vmin;
-    left: 25%;
-    width: 50%;
+    left: 20%;
+    width: 60%;
     border-width: 10px;
     border-color: black;
     border-radius: 10px;
@@ -41,8 +41,8 @@ h1 {
 .instructions {
     color: black;
     font-size: 2.9vmin;
-    left: 25%;
-    width: 50%;
+    left: 20%;
+    width: 60%;
     border-width: 10px;
     border-color: black;
     border-radius: 10px;
@@ -57,11 +57,12 @@ h1 {
 .ok_button {
     border-width: 0.6vmin;
     border-radius: 100%;
-    position: relative;
-    margin-top: 90px;
-    width: 150px;
-    height: 100px;
-    font-size: 30px;
+    position: absolute;
+    top: 80%;
+    left: 45%;
+    min-width: 10%;
+    height: 10%;
+    font-size: 5vmin;
 }
 
 #fill {
@@ -103,7 +104,7 @@ h1 {
     animation:bouncy 5s infinite linear;
     position:relative;
     margin-right: 10px;
-    margin-top: 90px;
+    margin-top: 5%;
 }
 @keyframes bouncy {
     0%{top:0em}
@@ -116,8 +117,10 @@ h1 {
 }
 
 .ball {
-    height: 50px;
+    height:50px;
+    position: relative;
+    margin-right: 10px;
     background-color: transparent;
-    background-size: contain;
+    background-size: cover;
     border: none;
 }
