--- a/src/Important Pages/BounceGame.css
+++ b/src/Important Pages/BounceGame.css
@@ -58,6 +58,7 @@
   position: absolute;
   top: 0; right: 0; left: 0; bottom: 0;
   opacity: 70%;
+  background-image: url('../Backgrounds/forest_resized.jpg');
   background-size: contain;
   z-index: -5;
 }
