--- a/src/Important Pages/BounceGame.css
+++ b/src/Important Pages/BounceGame.css
@@ -55,9 +55,9 @@
 }
 
 #background {
+  opacity: 0.8;
   position: absolute;
   top: 0; right: 0; left: 0; bottom: 0;
-  opacity: 70%;
   background-size: auto 100%;
   z-index: -5;
 }
